--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Music Player</title>
-    <link rel="stylesheet" href="/css/player.css">
+    <link rel="stylesheet" href="./css/player.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,16 +12,16 @@
 <body>
 
     
-    <img src="/assets/player_assets/images/1.png" id="background" />
-    <audio src="/assets/player_assets/music/eyno.mp3" id="song"></audio>
+    <img src="./assets/player_assets/images/1.png" id="background" />
+    <audio src="./assets/player_assets/music/eyno.mp3" id="song"></audio>
 
     <div class="container">  
         <div class="box"></div>      
-        <img src="/assets/player_assets/images/1.png" id="thumbnail" />
+        <img src="./assets/player_assets/images/1.png" id="thumbnail" />
         
-        <img src="/assets/player_assets/icons/play.png" onclick="playPause()" id="play-pause" />
-        <img src="/assets/player_assets/icons/forward.png" onclick="nextSong()" id="next-song" />
-        <img src="/assets/player_assets/icons/backward.png" onclick="previousSong()" id="previous-song" />
+        <img src="./assets/player_assets/icons/play.png" onclick="playPause()" id="play-pause" />
+        <img src="./assets/player_assets/icons/forward.png" onclick="nextSong()" id="next-song" />
+        <img src="./assets/player_assets/icons/backward.png" onclick="previousSong()" id="previous-song" />
 
         <div class="song-artist">Martin Bonnevier</div>
         <div class="song-title">01. eyno</div>
@@ -41,7 +41,7 @@
         <div class="durationTime"></div>
     </div>
 
-    <script src="/assets/player_assets/player.js"></script>
+    <script src="./assets/player_assets/player.js"></script>
    
 </body>
 </html>
