--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
-<!-- The music player is made by Hector Polanco: https://github.com/hecpolanco/Simple-Music-Player -->
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Music Player</title>
+    <title>Edgedreams</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/player.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-    
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Edgedreams</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" data-toggle="modal" data-target="#artistInfoModal">Info</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href= "mailto: martinbonnevier@gmail.com">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <img src="./assets/player_assets/images/1.png" id="background" />
     <audio src="./assets/player_assets/music/eyno.mp3" id="song"></audio>
 
@@ -40,8 +61,45 @@
         <div class="currentTime"></div>
         <div class="durationTime"></div>
     </div>
+    <footer class="footer mt-auto py-3 bg-dark">
+        <div class="text-center">
+            <span class="text-muted">&copy; Martin Bonnevier - 2022</span>
+        </div>
+    </footer>
+    
 
+<!-- Artist Info Modal -->
+<div class="modal fade" id="artistInfoModal" tabindex="-1" role="dialog" aria-labelledby="artistInfoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="artistInfoModalLabel">Edgereams by Martin Bonnevier</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <p class="text-justify">
+              Edgedream's music isn't just heard; it's felt. It transports you from the tranquil Swedish landscapes to electrifying sonic realms, all while reminding you of the timeless beauty of synthesized sound. Dive into Edgedream's world, and discover the harmonious blend of the past, present, and future.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+
+    <!-- Bootstrap JS, Popper.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Your custom JS here -->
     <script src="./assets/player_assets/player.js"></script>
-   
 </body>
+
 </html>
